# FVM_mesh_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.md  readme.md
.claude/: settings.local.json
examples/: channel_partitioned.yaml  circle.yaml  euler_test.yaml  multi_domain.yaml  multi_geometry.yaml  rectangle.yaml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  meshgen_main.cpp  partitioner_main.cpp  whole_mesh_main.cpp
src/common/: fvm_export.hpp  fvm_types.hpp
src/input/: CMakeLists.txt  expr_evaluator.cpp  expr_evaluator.hpp  input_config.cpp  input_config.hpp  input_parser.cpp  input_parser.hpp
src/meshgen/: CMakeLists.txt  geometry.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_types.hpp
src/polymesh/: CMakeLists.txt  local_mesh.cpp  local_mesh.hpp  mesh_partition_manager.cpp  mesh_partition_manager.hpp  mesh_quality.cpp  mesh_quality.hpp  partition.cpp  partition.hpp  poly_mesh.cpp  poly_mesh.hpp  reorder.cpp  reorder.hpp  vtk_writer.hpp
src/vtkio/: CMakeLists.txt  cell_types.hpp  vtk_reader.cpp  vtk_reader.hpp  vtk_writer.cpp  vtk_writer.hpp
tests/: CMakeLists.txt
tests/input/: CMakeLists.txt  expr_evaluator_test.cpp  input_parser_test.cpp
tests/meshgen/: CMakeLists.txt  geometry_test.cpp  mesh_generator_test.cpp
tests/polymesh/: CMakeLists.txt  poly_mesh_test.cpp  reorder_test.cpp
tests/vtkio/: CMakeLists.txt  vtk_reader_test.cpp
